# robot_six_wheel-rocker_bogie

./: README.md
mybot_gazebo_tutorial/: README.md
mybot_gazebo_tutorial/mybot_control/: CMakeLists.txt  package.xml
mybot_gazebo_tutorial/mybot_control/config/: mybot_control.yaml
mybot_gazebo_tutorial/mybot_control/launch/: mybot_control.launch
mybot_gazebo_tutorial/mybot_control/scripts/: control_6_wheel_4_sterring.py  keyboard_controller.py  robot.py
mybot_gazebo_tutorial/mybot_description/: CMakeLists.txt  package.xml
mybot_gazebo_tutorial/mybot_description/meshes/: Bogie_left_Link.STL  Bogie_right_Link.STL  Frame_front_left_Link.STL  Frame_front_right_Link.STL  Frame_front_right_Link.blend  Frame_rear_left_Link.STL  Frame_rear_left_Link.blend  Frame_rear_right_Link.STL  Frame_rear_right_Link.blend  Frame_rear_right_Link.blend1  Pivot_left_Link.STL  Pivot_left_Link.dae  Pivot_mid_Link.STL  Pivot_right_Link.STL  Wheel_front_left_Link.STL  Wheel_front_left_Link.blend  Wheel_front_left_Link.blend1  Wheel_front_right_Link.STL  Wheel_front_right_Link.blend  Wheel_front_right_Link.blend1  Wheel_mid_left_Link.STL  Wheel_mid_right_Link.STL  Wheel_mid_right_Link.blend  Wheel_rear_left_Link.STL  Wheel_rear_left_Link.blend  Wheel_rear_right_Link.STL  Wheel_rear_right_Link.blend  base_link.STL  base_link.blend
mybot_gazebo_tutorial/mybot_description/urdf/: macros.xacro  mybot.gazebo  mybot.xacro
mybot_gazebo_tutorial/mybot_gazebo/: CMakeLists.txt  package.xml
mybot_gazebo_tutorial/mybot_gazebo/launch/: mybot_world.launch
