<?xml version="1.0"?>
<package>
  <name>mybot_control</name>
  <version>0.0.0</version>
  <description>The mybot_control package</description>

  <maintainer email="pvdoanh.ce@gmail.com">pvd</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>