<?xml version="1.0"?>
<package>
  <name>mybot_gazebo</name>
  <version>0.0.0</version>
  <description>The mybot_gazebo package</description>
  <maintainer email="pvdoanh.ce@gmail.com">pvd</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
  </export>
</package>